@@ -2,11 +2,13 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.34 [20120319] [svn: r446]
+Changelog for sg3_utils-1.34 [20120320] [svn: r447]
   - sg_verify: add 16 byte cdb, bytchk (data-out buffer)
     and group number support
   - sync to spc4r35 and sbc3r30
   - sg_inq: add --export to experiment with udev
+    - decode old EMC Symmetrix abuse of VPD page 0x83
+  - sg_vpd: decode old EMC Symmetrix abuse of VPD page 0x83
   - sg_ses: increase max dpage response size to 64 KB
   - sg_sanitize: add --ause, --fail and --test=
   - sg_luns: add long extended flat space addressing format
@@ -19,7 +21,7 @@ Changelog for sg3_utils-1.34 [20120319] [svn: r446]
     - decode ATA PT fixed format sense (SAT-2)
   - ./configure options:
     - change --enable-no-linux-bsg to --disable-linuxbsg
-    - add --disable-scsistrings to reduce utility size
+    - add --disable-scsistrings to reduce utility sizes
 
 Changelog for sg3_utils-1.33 [20120118] [svn: r435]
   - sg_ses: major rework of indexes (again), now two level
